--- a/src/main/webapp/requisitions/approval-list/approval-list.html
+++ b/src/main/webapp/requisitions/approval-list/approval-list.html
@@ -26,7 +26,7 @@
                 <td>{{requisition.processingPeriod.endDate | date:'shortDate'}}</th>
                 <td>{{requisition.createdDate | date:'shortDate'}}</th>
                 <td class="col-emergency">
-                    <i ng-class="{'icon-ok': requisition.emergency}"></i>
+                    <span ng-if="requisition.emergency" class="icon-ok"></span>
                 </td>
             </tr>
         </tbody>
