OLMIS-1229: added forgot password and reset password screens to UI

--- a/src/main/webapp/auth/forgot-password.html
+++ b/src/main/webapp/auth/forgot-password.html
@@ -12,26 +12,19 @@
         <h1>{{'label.app.header' | message}}</h1>
         <openlmis-locale class="locale-container"/>
     </div>
-
-    <div class="login-form" ng-controller="LoginController">
-        <h2 id="signInLabel">{{'label.sign.in' | message}}</h2>
-
+    <div class="login-form" ng-controller="ForgotPasswordController">
+        <h2>{{'forgot.password.email.subject' | message}}</h2>
+        <div class="form-desc">{{'reset.password.message' | message}}</div>
         <form>
             <fieldset>
                 <div class="login-form-row">
-                    <label for="login-username">{{'label.username' | message}}</label>
-                    <input ng-model="username" type="text" id="login-username" required autofocus/>
+                    <label for="email">{{'placeholder.email' | message}}</label>
+                    <input type="text" id="email" ng-model="email"/>
                 </div>
+                <div class="alert is-error" id="errorMessage" ng-if="error">{{error | message}}</div>
                 <div class="login-form-row">
-                    <label for="login-password">{{'label.password' | message}}</label>
-                    <input ng-model="password" type="password" id="login-password" required/>
-                </div>
-                <div id="loginError" class="alert is-error" ng-bind="loginError" ng-show="loginError"></div>
-                <div class="login-form-row">
-                    <button class="btn btn-primary" ng-click="doLogin()" ng-disabled="disableSignInButton">{{'button.sign.in' | message}}</button>
-                </div>
-                <div class="login-form-row forgot-link">
-                    <a id="forgotPasswordLink" ui-sref="auth.login.forgotPassword">{{'link.forgot.password' | message}}</a>
+                    <button id="submitPasswordButton" class="btn btn-primary" ng-click="forgotPassword()" ng-disabled="!email">{{'button.submit' | message}}</button>
+                    <button id="cancelPasswordButton" class="btn btn-cancel" ng-click="goToLogin()">{{'button.cancel' | message}}</button>
                 </div>
             </fieldset>
         </form>
