--- a/src/main/webapp/requisition-view/requisition-view.html
+++ b/src/main/webapp/requisition-view/requisition-view.html
@@ -8,7 +8,7 @@
   ~ You should have received a copy of the GNU Affero General Public License along with this program.  If not, see http://www.gnu.org/licenses.  For additional information contact info@OpenLMIS.org. 
   -->
 <div class="page">
-    <ng-include src="'requisitions/requisition/header.html'"></ng-include>
+    <ng-include src="'requisition-view/header.html'"></ng-include>
     <ul class="nav nav-tabs">
       <li ui-sref-active="active" role="presentation"><a ui-sref="requisitions.requisition.fullSupply">{{'label.full.supply.products' | message}}</a></li>
       <li ui-sref-active="active" ng-if="vm.requisition.$template.showNonFullSupplyTab" role="presentation"><a ui-sref="requisitions.requisition.nonFullSupply">{{'label.non.full.supply.products' | message}}</a></li>
