OLMIS-1129: added test and jsdocks to forgot password and reset password controllers
changed both controllers to view model
changed login controller to view moddel too
refatored login controller tests
refactored login service tests

--- a/src/main/webapp/auth/forgot-password.html
+++ b/src/main/webapp/auth/forgot-password.html
@@ -12,19 +12,19 @@
         <h1>{{'label.app.header' | message}}</h1>
         <openlmis-locale class="locale-container"/>
     </div>
-    <div class="login-form" ng-controller="ForgotPasswordController">
+    <div class="login-form" ng-controller="ForgotPasswordController as vm">
         <h2>{{'forgot.password.email.subject' | message}}</h2>
         <div class="form-desc">{{'reset.password.message' | message}}</div>
         <form>
             <fieldset>
                 <div class="login-form-row">
                     <label for="email">{{'placeholder.email' | message}}</label>
-                    <input type="text" id="email" ng-model="email"/>
+                    <input type="text" id="email" ng-model="vm.email"/>
                 </div>
-                <div class="alert is-error" id="errorMessage" ng-if="error">{{error | message}}</div>
+                <div class="alert is-error" id="errorMessage" ng-if="vm.error">{{vm.error | message}}</div>
                 <div class="login-form-row">
-                    <button id="submitPasswordButton" class="btn btn-primary" ng-click="forgotPassword()" ng-disabled="!email">{{'button.submit' | message}}</button>
-                    <button id="cancelPasswordButton" class="btn btn-cancel" ng-click="goToLogin()">{{'button.cancel' | message}}</button>
+                    <button id="submitPasswordButton" class="btn btn-primary" ng-click="vm.forgotPassword()" ng-disabled="!vm.email">{{'button.submit' | message}}</button>
+                    <button id="cancelPasswordButton" class="btn btn-cancel" ng-click="vm.goToLogin()">{{'button.cancel' | message}}</button>
                 </div>
             </fieldset>
         </form>
