--- a/src/main/webapp/auth/reset-password.html
+++ b/src/main/webapp/auth/reset-password.html
@@ -12,21 +12,21 @@
         <h1>{{'label.app.header' | message}}</h1>
         <openlmis-locale class="locale-container"/>
     </div>
-    <div class="login-form" ng-controller="ResetPasswordController">
+    <div class="login-form" ng-controller="ResetPasswordController as vm">
         <form>
             <h2>{{'button.reset.password' | message}}</h2>
             <fieldset>
                 <div class="login-form-row">
-                    <label for="password1">{{'placeholder.new.password' | message}}</label>
-                    <input ng-model="password1" type="password" id="password1" required autofocus/>
+                    <label for="vm.password1">{{'placeholder.new.password' | message}}</label>
+                    <input ng-model="vm.password1" type="password" id="password1" required autofocus/>
                 </div>
                 <div class="login-form-row">
                     <label for="password2">{{'placeholder.reenter.password' | message}}</label>
-                    <input ng-model="password2" type="password" id="password2" required/>
+                    <input ng-model="vm.password2" type="password" id="password2" required/>
                 </div>
-                <div id="error" class="alert is-error" ng-if="error">{{error | message}}</div>
+                <div id="error" class="alert is-error" ng-if="vm.error">{{vm.error | message}}</div>
                 <div class="login-form-row">
-                    <button class="btn btn-primary" ng-click="changePassword()">{{'label.change.password' | message}}</button>
+                    <button class="btn btn-primary" ng-click="vm.changePassword()" ng-disabled="!vm.password1 || !vm.password2">{{'label.change.password' | message}}</button>
                 </div>
             </fieldset>
         </form>
