--- a/src/main/webapp/common/alert.html
+++ b/src/main/webapp/common/alert.html
@@ -1,8 +1,8 @@
 <div class=alert-main>
     <span class="glyphicon {{icon}}"></span>
     <div class="alert-messages">
-		<div>{{message}}</div>
-		<div class="alert-message-additional">{{additionalMessage}}</div>
+		<div>{{message | message}}</div>
+		<div class="alert-message-additional">{{additionalMessage | message}}</div>
 	</div>
 </div>
 <footer openlmis-message="msg.alert.modal.footer"></footer>
