OLMIS-1129: added validations for email and passwords in forgot password workflow
changed states definitions
changed some messages
changed alert modal to success modal
fixed some empty lines etc
added tests for validations

--- a/src/main/webapp/auth/login-form.html
+++ b/src/main/webapp/auth/login-form.html
@@ -31,7 +31,7 @@
                     <button class="btn btn-primary" ng-click="vm.doLogin()" ng-disabled="vm.disableSignInButton">{{'button.sign.in' | message}}</button>
                 </div>
                 <div class="login-form-row forgot-link">
-                    <a id="forgotPasswordLink" ui-sref="auth.login.forgotPassword">{{'link.forgot.password' | message}}</a>
+                    <a id="forgotPasswordLink" ui-sref="auth.forgotPassword">{{'link.forgot.password' | message}}</a>
                 </div>
             </fieldset>
         </form>
