--- a/src/main/webapp/auth/reset-password.html
+++ b/src/main/webapp/auth/reset-password.html
@@ -15,18 +15,19 @@
     <div class="login-form" ng-controller="ResetPasswordController as vm">
         <form>
             <h2>{{'button.reset.password' | message}}</h2>
+            <div class="form-desc">{{'reset.password.requirements' | message}}</div>
             <fieldset>
                 <div class="login-form-row">
-                    <label for="vm.password1">{{'placeholder.new.password' | message}}</label>
-                    <input ng-model="vm.password1" type="password" id="password1" required autofocus/>
+                    <label for="password">{{'placeholder.new.password' | message}}</label>
+                    <input ng-model="vm.password" type="password" id="password" required autofocus/>
                 </div>
                 <div class="login-form-row">
-                    <label for="password2">{{'placeholder.reenter.password' | message}}</label>
-                    <input ng-model="vm.password2" type="password" id="password2" required/>
+                    <label for="reenteredPassword">{{'placeholder.reenter.password' | message}}</label>
+                    <input ng-model="vm.reenteredPassword" type="password" id="reenteredPassword" required/>
                 </div>
                 <div id="error" class="alert is-error" ng-if="vm.error">{{vm.error | message}}</div>
                 <div class="login-form-row">
-                    <button class="btn btn-primary" ng-click="vm.changePassword()" ng-disabled="!vm.password1 || !vm.password2">{{'label.change.password' | message}}</button>
+                    <button class="btn btn-primary" ng-click="vm.changePassword()" ng-disabled="!vm.password || !vm.reenteredPassword">{{'label.change.password' | message}}</button>
                 </div>
             </fieldset>
         </form>
