--- a/src/main/webapp/auth/forgot-password.html
+++ b/src/main/webapp/auth/forgot-password.html
@@ -19,12 +19,12 @@
             <fieldset>
                 <div class="login-form-row">
                     <label for="email">{{'placeholder.email' | message}}</label>
-                    <input type="text" id="email" ng-model="vm.email"/>
+                    <input type="text" id="email" ng-model="vm.email" required autofocus/>
                 </div>
                 <div class="alert is-error" id="errorMessage" ng-if="vm.error">{{vm.error | message}}</div>
                 <div class="login-form-row">
                     <button id="submitPasswordButton" class="btn btn-primary" ng-click="vm.forgotPassword()" ng-disabled="!vm.email">{{'button.submit' | message}}</button>
-                    <button id="cancelPasswordButton" class="btn btn-cancel" ng-click="vm.goToLogin()">{{'button.cancel' | message}}</button>
+                    <button id="cancelPasswordButton" class="btn btn-cancel" ng-click="vm.redirectToLogin()">{{'button.cancel' | message}}</button>
                 </div>
             </fieldset>
         </form>
