OLMIS-1129: moved ctrl definitions from html to state for login, forgot-password and reset-password

--- a/src/main/webapp/auth/forgot-password.html
+++ b/src/main/webapp/auth/forgot-password.html
@@ -12,7 +12,7 @@
         <h1>{{'label.app.header' | message}}</h1>
         <openlmis-locale class="locale-container"/>
     </div>
-    <div class="login-form" ng-controller="ForgotPasswordController as vm">
+    <div class="login-form">
         <h2>{{'forgot.password.email.subject' | message}}</h2>
         <div class="form-desc">{{'reset.password.message' | message}}</div>
         <form>
