--- a/src/main/webapp/auth/login-form.html
+++ b/src/main/webapp/auth/login-form.html
@@ -13,7 +13,7 @@
         <openlmis-locale class="locale-container"/>
     </div>
 
-    <div class="login-form" ng-controller="LoginController as vm">
+    <div class="login-form">
         <h2 id="signInLabel">{{'label.sign.in' | message}}</h2>
 
         <form>
