--- a/src/main/webapp/auth/reset-password.html
+++ b/src/main/webapp/auth/reset-password.html
@@ -12,7 +12,7 @@
         <h1>{{'label.app.header' | message}}</h1>
         <openlmis-locale class="locale-container"/>
     </div>
-    <div class="login-form" ng-controller="ResetPasswordController as vm">
+    <div class="login-form">
         <form>
             <h2>{{'button.reset.password' | message}}</h2>
             <div class="form-desc">{{'reset.password.requirements' | message}}</div>
