--- a/src/main/webapp/common/locale-list.html
+++ b/src/main/webapp/common/locale-list.html
@@ -1,6 +1,6 @@
 
 <ul class="locales">
-  <li ng-repeat="code in vm.locales">
-    <a id="locale_{{code}}" ng-class="{'selected': vm.selectedLocale == code}" ng-click=vm.changeLocale(code) openlmis-message="label.locale.{{code}}" ></a>
+  <li ng-repeat="code in locale.locales">
+    <a id="locale_{{code}}" ng-class="{'selected': locale.selectedLocale == code}" ng-click=locale.changeLocale(code) openlmis-message="label.locale.{{code}}" ></a>
   </li>
 </ul>
