--- a/src/main/webapp/admin-template/template.html
+++ b/src/main/webapp/admin-template/template.html
@@ -47,7 +47,7 @@
                             </div>
                         </td>
                         <td>
-                            <div ng-if="column.name == 'numberOfNewPatientsAdded'">
+                            <div ng-if="column.columnDefinition.options.length > 0">
                                 <select ng-model="column.option" ng-options="option as option.optionLabel for option in column.columnDefinition.options track by option.id"></select>
                             </div>
                             <div ng-if="!column.$isValid(vm.template.columnsMap)" class="error">{{vm.errorMessage(column)}}</div>
