OLMIS-1407 FEOLMIS-760: Removed fetching reasons inside of the total losses and adjustments controller
* updated requisition factory to take 4 parameters
* updated tests

--- a/src/main/webapp/requisition-losses-and-adjustments/losses-and-adjustments-modal.html
+++ b/src/main/webapp/requisition-losses-and-adjustments/losses-and-adjustments-modal.html
@@ -4,7 +4,7 @@
         <label for="reason">{{'label.equipment.maintenance.request.reason' | message}}</label>
         <select id="reason"
          ng-model="vm.adjustment.reason"
-         ng-options="reason as reason.name for reason in vm.reasons"
+         ng-options="reason as reason.name for reason in requisition.$stockAdjustmentReasons"
          ></select>
     </div>
     <div class="form-group">
