OLMIS-1468: Extracted openlmis-header module

--- a/src/main/webapp/openlmis-header/header.html
+++ b/src/main/webapp/openlmis-header/header.html
@@ -6,7 +6,7 @@
   <div class="status">
     <a offline ng-show="isOffline" class="status status-offline" ng-click="checkConnection()">{{'msg.requisition.view.offline' | message }}</a>
     <div ng-show="!!user">
-      <ng-include src="'dashboard/user.html'"></ng-include>
+      <ng-include src="'openlmis-header/user.html'"></ng-include>
     </div>
   </div>
 </div>
