OLMIS-1084: Added skip product functionality
Now it is possible to mark product from requisition as skipped from product grid.

--- a/src/main/webapp/requisition-non-full-supply/non-full-supply.html
+++ b/src/main/webapp/requisition-non-full-supply/non-full-supply.html
@@ -2,7 +2,12 @@
 	<table>
 		<thead>
 			<tr>
-				<th class="col-{{column.name}}" ng-repeat="column in vm.columns | orderBy : 'displayOrder'">{{column.label}}</th>
+				<th class="col-{{column.name}}" ng-repeat="column in vm.columns | orderBy : 'displayOrder'">{{column.label}}
+					<div ng-if="column.name == 'skipped'">
+						<a href="" ng-click="vm.setSkipAll(true)">All</a> |
+						<a href="" ng-click="vm.setSkipAll(false)">None</a>
+					</div>
+				</th>
 				<th ng-if="vm.displayDeleteColumn()"></th>
 			</tr>
 		</thead>
