--- a/src/main/webapp/requisition-product-grid/product-grid-cell.html
+++ b/src/main/webapp/requisition-product-grid/product-grid-cell.html
@@ -4,9 +4,14 @@
 	</div>
 	<input type="text"
 		   ng-model="lineItem[column.name]"
-		   ng-if="!isReadOnly && !isTotalLossesAndAdjustments"
+		   ng-if="!isReadOnly && !isTotalLossesAndAdjustments && !isSkipped"
+		   ng-disabled="lineItem.skipped"
 		   ng-change="validate()"
 		   ng-blur="validate()">
+	<input type="checkbox"
+		   ng-model="lineItem[column.name]"
+		   ng-if="isSkipped"
+		   ng-disabled="canNotSkip()">
 	<div ng-if="isTotalLossesAndAdjustments"
 		 losses-and-adjustments
 		 line-item="lineItem"
