--- a/src/main/webapp/requisition-product-grid/product-grid-cell.html
+++ b/src/main/webapp/requisition-product-grid/product-grid-cell.html
@@ -9,6 +9,7 @@
 		   ng-change="validate()"
 		   ng-blur="validate()">
 	<input type="checkbox"
+		   class="skip"
 		   ng-model="lineItem[column.name]"
 		   ng-if="isSkipped"
 		   ng-disabled="canNotSkip()">
