OLMIS-1084: Validations are not performed on skipped product
*Validations are not performed on skipped product
*Changed full-supply-controller test
*Updated JSDoc

--- a/src/main/webapp/requisition-product-grid/product-grid-cell.html
+++ b/src/main/webapp/requisition-product-grid/product-grid-cell.html
@@ -17,5 +17,5 @@
 		 losses-and-adjustments
 		 line-item="lineItem"
 		 requisition="requisition"></div>
-	 <div class="cell-error-message">{{lineItem.$errors[column.name]}}</div>
+	 <div ng-if="!lineItem.skipped" class="cell-error-message">{{lineItem.$errors[column.name]}}</div>
 </td>
