--- a/src/main/webapp/requisition-summary/requisition-summary-popover.html
+++ b/src/main/webapp/requisition-summary/requisition-summary-popover.html
@@ -3,6 +3,6 @@
 <dl>
     <dt>{{'label.full.supply.products' | message}}</dt>
     <dd>{{vm.calculateFullSupplyCost() | currency}}</dd>
-    <dt>{{'label.non.full.supply.products' | message}}</dt>
-    <dd>{{vm.calculateNonFullSupplyCost() | currency}}</dd>
+    <dt ng-if="vm.showNonFullSupplySummary">{{'label.non.full.supply.products' | message}}</dt>
+    <dd ng-if="vm.showNonFullSupplySummary">{{vm.calculateNonFullSupplyCost() | currency}}</dd>
 </dl>
