--- a/src/main/webapp/requisition-view/convert-to-order-modal.html
+++ b/src/main/webapp/requisition-view/convert-to-order-modal.html
@@ -9,7 +9,7 @@
                filter:searchText"
                class="radio" >
             <input type="radio" name="radioBtn" ng-value="depot.id"
-                   ng-model="requisition.supplyingFacility"/>
+                   ng-model="requisitionWithDepots.requisition.supplyingFacility"/>
             {{depot.name}}
         </label>
     </fieldset>
