Revert "OLMIS-1519: Updated UI to show message when user wants to convert requisition to order, but supplying depot is not selected"
This reverts commit ae79cc5c14a53fc2c3111134e0916ecd8fe7aa42.

--- a/src/main/webapp/requisition-view/convert-to-order-modal.html
+++ b/src/main/webapp/requisition-view/convert-to-order-modal.html
@@ -9,7 +9,7 @@
                filter:searchText"
                class="radio" >
             <input type="radio" name="radioBtn" ng-value="depot.id"
-                   ng-model="requisitionWithDepots.requisition.supplyingFacility"/>
+                   ng-model="requisition.supplyingFacility"/>
             {{depot.name}}
         </label>
     </fieldset>
